added images in projects for visualization

--- a/index.html
+++ b/index.html
@@ -27,10 +27,27 @@
             <ul>
                 <li><a href="https://uclm-openlayersmapping.onrender.com/" target="_blank">UCLMWAYS: A CAMPUS NAVIGATION SYSTEM FOR UCLM STUDENTS</a></li>
                 <figure>
-                    <img src="./assets/UCLM WAYS.png" alt="UCLMWAYS Screenshot" width="600">
+                    <a href="https://uclm-openlayersmapping.onrender.com/" target="_blank"><img src="./assets/UCLM WAYS.png" alt="UCLMways campus navigation system interface showing a student using a digital map kiosk displaying the UCLM campus layout with location markers. The kiosk screen displays the text Find Your Way, The UCLmway with a glowing location pin icon. The scene is set against a modern university building backdrop during evening hours with a gradient sky, conveying a welcoming and innovative atmosphere for campus navigation." width="600"></a>
                     <figcaption>A campus navigation system, basically a web application for UCLM students to navigate the university campus. Not just for students but also for staffs and visitors.</figcaption>
+                </figure>
+                <li><a href="https://suellonb.github.io/to-do-list/todo.html" target="_blank">To-Do List App</a></li>
+                <figure>
+                    <a href="https://suellonb.github.io/to-do-list/todo.html" target="_blank"><img src="./assets/To-Do List App.png" alt="To-Do List App" width="600"></a>
+                    <figcaption>A simple to-do list application that helps users manage their tasks efficiently. It allows users to add, edit, and delete tasks, as well as mark them as completed.</figcaption>
                 </figure>
         </section>
     </main>
+    <footer>
+        <section id="contacts">
+            <h2>Contact Me</h2>
+            <p>If you want to get in touch with me, feel free to reach out through the following channels:</p>
+            <address>
+                Written and Made by: Niñobert Suello<br>
+                Email: <a href="mailto:ninoberts@gmail.com" target="_blank">ninoberts@gmail.com</a><br>
+                GitHub: <a href="https://github.com/SuelloNB" target="_blank">SuelloNB</a>
+                Phone: <a href="tel:+639938210891" target="_blank">+639938210891</a><br>
+                Visit me on LinkedIn: <a href="https://www.linkedin.com/in/ni%C3%B1obert-suello-1418a7262/" target="_blank">Niñobert Suellon</a><br>
+
+            </address>
 </body>
 </html>
